# libbencode

./: README.md  pyproject.toml
src/libbencode/: __init__.py  decoder.py  encoder.py  exceptions.py  version.py
tests/: test_decoder.py  test_encoder.py
